-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
Query Integration
-
Fully Compatible
-
ALL
-
v8.0
-
None
-
None
-
None
-
None
-
None
-
None
-
None
Dereference before null check
There may be a null pointer dereference, or else the comparison against null is unnecessary. All paths that lead to this null pointer comparison already dereference the pointer earlier
/data/bazel_cache/1de52aaeb35278243ca29a4785ce7969/execroot/_main/src/mongo/db/op_debug.cpp:177: REVERSE_INULL 173263 Null-checking "client" suggests that it may be null, but it has already been dereferenced on all paths leading to the check.
- is duplicated by
-
SERVER-108523 Coverity analysis defect 163268: Dereference before null check
-
- Closed
-
- related to
-
SERVER-108523 Coverity analysis defect 163268: Dereference before null check
-
- Closed
-