SERVER-103326: Remove dereference of client after null check (coverity defect) (#34550)

GitOrigin-RevId: d7557a748591970528a83b4b8a6f457e815184f6